Created QuestionPageDTO to get questions from rest api in pages